--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,8 @@ figure {
 }
     
 body {
-    margin-top: 25px;
-    margin-bottom: 25px;
-    margin-left: 75px;
-    margin-right: 75px;
+    margin: 8px;
+    display: block;
     background-color: rgba(0, 0, 0, 0.425);
 }
 
@@ -32,7 +30,7 @@ h2 {
     font-size: 32pt;
 }
 
-h3 {
+#mainHeading {
     font-family: Cambria;
     text-align: center;
     font-size: 42pt;
@@ -79,6 +77,10 @@ footer {
 
 p {
     color:rgb(100, 100, 100)
+}
+
+.funParagraph {
+    color: green;
 }
 
 
